Update: Better logic for displays
